apps/uptime-kuma/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: keycloak
  name: #@ data.values.namespace
---
