apps/uptime-kuma/manifests/05-service.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-bot
  namespace: #@ data.values.namespace
spec:
  selector:
    component: uptime-bot
  type: ClusterIP
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
---
